--- a/m_html/6_add_memo.html
+++ b/m_html/6_add_memo.html
@@ -8,11 +8,16 @@
 </head>
 <body>
     <section class="wrap">
-        <h1 class="name">게시글 추가</h1>
-        <div class="buttons">
-            <button class="menu" id="log_out_btn">로그아웃</button>
-            <button class="menu" id="list_memo">게시물 목록</button>
-            <button class="menu" id="mod_my_btn">내 정보 수정</button>
+        <h1 class="name">아무 말 대잔치</h1>
+        <div class="dropdown">
+            <button class="dropbtn"> 
+                <span 
+                class="dropbtn_icon">profile-pic</span>
+            </button>
+            <div class="dropdown-content">
+                <button class="menu" id="log_out_btn">로그아웃</button>
+                <button class="menu" id="mod_my_btn">내 정보 수정</button>
+            </div>
         </div>
         <article class="payload">
             <form id="memo-form" method="POST" action="/add_memo" enctype="multipart/form-data">
@@ -31,26 +36,5 @@
             </form>
         </article>
     </section>
-    <script>
-        // 내 정보 보기 변경 버튼 클릭
-        document.getElementById('mod_my_btn').addEventListener('click', () => {
-            window.location.href = '/my_info';
-        });
-
-        document.getElementById('list_memo').addEventListener('click', () => {
-            window.location.href = '/memo_list';
-        });
-
-        // 로그아웃 버튼 클릭
-        document.getElementById('log_out_btn').addEventListener('click', () => {
-            window.location.href = '/login';
-        });
-        if (memo.img) {
-            memoImgElement.src = memo.img; // 게시물 폴더에서 이미지 로드
-        } else {
-            memoImgElement.src = '/uploads/default-memo.png'; // 기본 게시물 사진
-        }
-        
-    </script>
 </body>
 </html>
