--- a/m_html/7_my_info.html
+++ b/m_html/7_my_info.html
@@ -8,140 +8,38 @@
 </head>
 <body>
     <section class="wrap">
-        <!-- 헤더 영역 -->
-        <header class="header">
-            <h1 class="title">아무 말 대잔치</h1>
-            <div class="menu-buttons">
+        <h1 class="name">아무 말 대잔치</h1>
+        <div class="dropdown">
+            <button class="dropbtn"> 
+                <span class="dropbtn_icon">profile-pic</span>
+            </button>
+            <div class="dropdown-content">
+                <button class="menu" id="mod_my_btn">회원정보 수정</button>
+                <button class="menu" id="mod_pw_btn">비밀번호 수정</button>
                 <button class="menu" id="log_out_btn">로그아웃</button>
-                <button class="menu" id="write_memo">게시물 작성</button>
-                <button class="menu" id="mod_my_btn">내 정보 수정</button>
-                <button class="menu" id="list_memo">게시물 목록</button>
             </div>
-        </header>
+        </div>
 
         <!-- 프로필 정보 -->
         <article class="profile">
-            <p class="description">프로필 사진</p>
-            <div class="profile-pic" id="profile-pic-container">
-                <input type="file" id="profile-pic" accept="image/*">
-            </div>
+            <p class="description">프로필 사진*</p>
+            <div class="profile-pic-container" id="profile-pic-container">
+                <input type="file" id="profile-pic-input" accept="image/*" style="display: none;">
+                <div class="profile-pic" id="profile-pic"></div>
+                <p id="profile-pic-filename">선택된 파일 없음</p>
+            </div>            
             <p class="description">이메일</p>
-            <p class="email">이메일 로드 중...</p>
+            <p class="email" id="user-email">이메일 로드 중...</p>
             <p class="description">닉네임</p>
-            <input type="text" id="nickname" class="nickname" value="닉네임 로드 중...">
+            <input type="text" id="nickname" class="nickname" placeholder="닉네임 입력">
+            <small class="helper-text" id="helper-text"></small>
         </article>
 
         <!-- 버튼 영역 -->
         <div class="buttons">
             <button class="button edit" id="update-btn">수정하기</button>
-            <button class="button" id="password-change-btn">비밀번호 수정</button>
             <button class="button delete" id="delete-btn">회원탈퇴</button>
         </div>
     </section>
-
-    <script>
-        // 내 정보 로드
-        async function loadUserInfo() {
-            try {
-                const response = await fetch('/api/my_info');
-                if (!response.ok) {
-                    alert('로그인이 필요합니다.');
-                    window.location.href = '/login';
-                    return;
-                }
-
-                const { email, nickname, img } = await response.json();
-                document.querySelector('.email').textContent = email;
-                document.getElementById('nickname').value = nickname;
-
-                const profilePicContainer = document.getElementById('profile-pic-container');
-                if (img) {
-                    profilePicContainer.style.backgroundImage = `url(${img})`;
-                }
-            } catch (err) {
-                console.error('사용자 정보 로드 중 오류 발생:', err);
-            }
-        }
-
-        // 프로필 사진 클릭 시 파일 업로드 창 열기
-        document.getElementById('profile-pic-container').addEventListener('click', () => {
-            document.getElementById('profile-pic').click();
-        });
-
-        // 정보 수정
-        document.getElementById('update-btn').addEventListener('click', async () => {
-            const nickname = document.getElementById('nickname').value;
-            const profilePic = document.getElementById('profile-pic').files[0];
-
-            const formData = new FormData();
-            formData.append('nickname', nickname);
-            if (profilePic) formData.append('img', profilePic);
-
-            try {
-                const response = await fetch('/api/my_info', {
-                    method: 'PATCH',
-                    body: formData,
-                });
-
-                if (!response.ok) {
-                    throw new Error('정보 수정에 실패했습니다.');
-                }
-
-                alert('정보가 성공적으로 수정되었습니다.');
-                window.location.reload();
-            } catch (err) {
-                console.error('정보 수정 중 오류 발생:', err);
-            }
-        });
-
-        // 비밀번호 수정 페이지로 이동
-        document.getElementById('password-change-btn').addEventListener('click', () => {
-            window.location.href = '/mod_pw';
-        });
-
-        // 로그아웃 버튼 클릭
-        document.getElementById('log_out_btn').addEventListener('click', () => {
-            window.location.href = '/login';
-        });
-
-        // 게시물 작성 페이지 이동
-        document.getElementById('write_memo').addEventListener('click', () => {
-            window.location.href = '/add_memo';
-        });
-
-        // 내 정보 수정 버튼 클릭
-        document.getElementById('mod_my_btn').addEventListener('click', () => {
-            window.location.href = '/my_info';
-        });
-
-        // 게시물 목록 페이지 이동
-        document.getElementById('list_memo').addEventListener('click', () => {
-            window.location.href = '/memo_list';
-        });
-
-        // 회원 탈퇴
-        document.getElementById('delete-btn').addEventListener('click', async () => {
-            const confirmDelete = confirm('정말 탈퇴하시겠습니까?');
-            if (!confirmDelete) return;
-
-            try {
-                const response = await fetch('/delete_user', {
-                    method: 'DELETE',
-                });
-
-                if (!response.ok) {
-                    throw new Error('회원 탈퇴 실패');
-                }
-
-                alert('회원 탈퇴가 완료되었습니다.');
-                window.location.href = '/login';
-            } catch (err) {
-                console.error('회원 탈퇴 중 오류 발생:', err);
-            }
-        });
-
-        // 초기 로드
-        loadUserInfo();
-    </script>
 </body>
 </html>
