게시물 상세보기 - 좋아요, 조회수, 댓글 css 수정

--- a/m_html/4_look_memo.html
+++ b/m_html/4_look_memo.html
@@ -40,7 +40,11 @@
             <p class="context" id="context">내용</p>
             <div class="like-section">
                 <button id="like-button" class="like-button">좋아요</button>
-                <span id="like-count">좋아요: 0</span>
+                <span id="like-count"> 0</span>
+                <button id="view-button" class="view-button">조회수</button>
+                <span id="view-count"> 0</span>
+                <button id="comment-button" class="comment-button">댓글</button>
+                <span id="comment-button">0</span>
             </div>
         </article>
 
