--- a/m_html/6_add_memo.html
+++ b/m_html/6_add_memo.html
@@ -9,6 +9,8 @@
 <body>
     <section class="wrap">
         <h1 class="name">아무 말 대잔치</h1>
+        <hr class="horizontal-rule"/>
+        <h1 class="page_title">게시글 작성</h1>
         <div class="dropdown">
             <button class="dropbtn"> 
                 <span 
@@ -21,9 +23,9 @@
         </div>
         <article class="payload">
             <form id="memo-form" method="POST" action="/add_memo" enctype="multipart/form-data">
-                <p class="description">제목*</p>
+                <p class="description">제목* (최대 26자)</p>
                 <hr class="horizontal-rule"/>
-                <input type="string" id="title" name="title" required>
+                <input type="text" id="title" name="title" maxlength="26" required>
                 <hr class="horizontal-rule"/>
                 <p class="description">내용*</p>
                 <hr class="horizontal-rule"/>
