--- a/m_html/8_mod_pw.html
+++ b/m_html/8_mod_pw.html
@@ -9,6 +9,8 @@
 <body>
     <section class="wrap">
         <h1 class="name">아무 말 대잔치</h1>
+        <hr class="horizontal-rule"/>
+        <h1 class="page_title">비밀번호 변경</h1>
         <div class="dropdown">
             <button class="dropbtn"> 
                 <span 
@@ -19,9 +21,6 @@
                 <button class="menu" id="mod_my_btn">내 정보 수정</button>
             </div>
         </div>
-
-        <h1 class="title">비밀번호 수정</h1>
-
         <form id="pw-mod-form">
 
             <label class="description" for="password">새 비밀번호</label>
