--- a/m_html/1_signup.html
+++ b/m_html/1_signup.html
@@ -46,5 +46,43 @@
             </form>
         </article>
     </section>
+    <script>
+        document.getElementById('signup-button').addEventListener('click', async (event) => {
+            event.preventDefault();
+
+            const form = document.getElementById('signup-form');
+            const formData = new FormData(form);
+
+            // 비밀번호 확인 로직
+            const password = document.getElementById('password').value;
+            const pw2 = document.getElementById('pw2').value;
+            if (password !== pw2) {
+                document.getElementById('pw2-error').textContent = '* 비밀번호가 일치하지 않습니다.';
+                return;
+            } else {
+                document.getElementById('pw2-error').textContent = '';
+            }
+
+            try {
+                const response = await fetch('/signup', {
+                    method: 'POST',
+                    body: formData,
+                });
+
+                if (response.ok) {
+                    // 회원가입 성공 시
+                    alert('회원가입이 완료되었습니다!');
+                    window.location.href = '/2_login.html'; // 로그인 페이지로 리다이렉트
+                } else {
+                    // 서버에서 에러 응답 처리
+                    const errorData = await response.json();
+                    alert(`회원가입 실패: ${errorData.error}`);
+                }
+            } catch (error) {
+                console.error('회원가입 중 오류 발생:', error);
+                alert('회원가입 중 오류가 발생했습니다. 다시 시도해주세요.');
+            }
+        });
+    </script>
 </body>
 </html>
