--- a/m_html/2_login.html
+++ b/m_html/2_login.html
@@ -24,5 +24,57 @@
         </form>
         <a class="button" href="/1_signup.html">회원가입</a>
     </section>
+    <script>
+        document.getElementById('login-form').addEventListener('submit', async (event) => {
+            event.preventDefault(); // 기본 제출 방지
+
+            const email = document.getElementById('email').value.trim();
+            const password = document.getElementById('password').value.trim();
+            const emailHelper = document.getElementById('email-helper');
+            const passwordHelper = document.getElementById('password-helper');
+
+            // 유효성 검사
+            let isValid = true;
+
+            if (!email) {
+                emailHelper.textContent = '* 이메일을 입력해주세요.';
+                isValid = false;
+            } else {
+                emailHelper.textContent = '';
+            }
+
+            if (!password) {
+                passwordHelper.textContent = '* 비밀번호를 입력해주세요.';
+                isValid = false;
+            } else {
+                passwordHelper.textContent = '';
+            }
+
+            if (!isValid) return;
+
+            // 로그인 요청
+            try {
+                const response = await fetch('/login', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ email, password }),
+                });
+
+                if (response.ok) {
+                    // 로그인 성공 시 메인 페이지로 리다이렉트
+                    window.location.href = '/memo_list';
+                } else {
+                    // 로그인 실패 시
+                    const errorData = await response.json();
+                    alert(`로그인 실패: ${errorData.error || '알 수 없는 오류'}`);
+                }
+            } catch (error) {
+                console.error('로그인 요청 중 오류 발생:', error);
+                alert('로그인 중 오류가 발생했습니다. 다시 시도해주세요.');
+            }
+        });
+    </script>
 </body>
 </html>
