--- a/m_html/6_add_memo.html
+++ b/m_html/6_add_memo.html
@@ -38,5 +38,26 @@
             </form>
         </article>
     </section>
+    <script>
+        // 내 정보 보기 변경 버튼 클릭
+        document.getElementById('mod_my_btn').addEventListener('click', () => {
+            window.location.href = '/my_info';
+        });
+
+        document.getElementById('list_memo').addEventListener('click', () => {
+            window.location.href = '/memo_list';
+        });
+
+        // 로그아웃 버튼 클릭//
+        document.getElementById('log_out_btn').addEventListener('click', () => {
+            window.location.href = '/login';
+        });
+        if (memo.img) {
+            memoImgElement.src = memo.img; // 게시물 폴더에서 이미지 로드
+        } else {
+            memoImgElement.src = '/uploads/default-memo.png'; // 기본 게시물 사진
+        }
+        
+    </script>
 </body>
 </html>
