--- a/m_html/3_memo_list.html
+++ b/m_html/3_memo_list.html
@@ -36,12 +36,18 @@
     </section>
 
     <script>
+        
+        const API_BASE_URL = 'http://localhost:5000';
         document.addEventListener('DOMContentLoaded', async () => {
             const memoList = document.getElementById('memo-list');
 
             // 게시물 목록 가져오기
             try {
-                const response = await fetch('/api/memo_list');
+                const response = await fetch(`${API_BASE_URL}/api/memo_list`,{
+                    method: 'GET',
+                    credentials: 'include',
+                });
+
                 if (!response.ok) throw new Error('Failed to fetch memo list');
 
                 const memos = await response.json();
@@ -76,10 +82,10 @@
         // 버튼 클릭 이벤트 처리
         document.getElementById('log_out_btn').addEventListener('click', async () => {
             try {
-                const response = await fetch('/logout', { method: 'POST' });
+                const response = await fetch(`${API_BASE_URL}/logout`, { method: 'POST' });
                 if (response.ok) {
                     alert('로그아웃되었습니다.');
-                    window.location.href = '/login';
+                    window.location.href = '/2_login.html';
                 } else {
                     alert('로그아웃에 실패했습니다.');
                 }
@@ -89,11 +95,11 @@
         });
 
         document.getElementById('mod_my_btn').addEventListener('click', () => {
-            window.location.href = '/my_info';
+            window.location.href = '/7_my_info.html';
         });
 
         document.getElementById('write_memo').addEventListener('click', () => {
-            window.location.href = '/add_memo';
+            window.location.href = '/6_add_memo.html';
         });
     </script>
 </body>
