--- a/m_html/6_add_memo.html
+++ b/m_html/6_add_memo.html
@@ -39,25 +39,50 @@
         </article>
     </section>
     <script>
+        
+        const API_BASE_URL = 'http://localhost:5000';
         // 내 정보 보기 변경 버튼 클릭
         document.getElementById('mod_my_btn').addEventListener('click', () => {
-            window.location.href = '/my_info';
+            window.location.href = '/7_my_info.html';
         });
 
         document.getElementById('list_memo').addEventListener('click', () => {
-            window.location.href = '/memo_list';
+            window.location.href = '/3_memo_list.html';
         });
 
         // 로그아웃 버튼 클릭//
         document.getElementById('log_out_btn').addEventListener('click', () => {
-            window.location.href = '/login';
+            window.location.href = '/2_login.html';
         });
         if (memo.img) {
             memoImgElement.src = memo.img; // 게시물 폴더에서 이미지 로드
         } else {
             memoImgElement.src = '/uploads/default-memo.png'; // 기본 게시물 사진
         }
-        
+        // 폼 제출 이벤트
+        document.getElementById('memo-form').addEventListener('submit', async (event) => {
+            event.preventDefault();
+
+            const formData = new FormData(event.target);
+
+            try {
+                const response = await fetch(`${API_BASE_URL}/add_memo`, {
+                    method: 'POST',
+                    body: formData,
+                });
+
+                if (response.ok) {
+                    alert('게시글이 성공적으로 추가되었습니다.');
+                    window.location.href = 'http://localhost:3000/3_memo_list.html';
+                } else {
+                    const errorResponse = await response.json().catch(() => ({ error: '알 수 없는 오류가 발생했습니다.' }));
+                    throw new Error(errorResponse.error || '게시글 추가 실패');
+                }
+            } catch (err) {
+                console.error('게시글 추가 중 오류 발생:', err);
+                alert('게시글 추가 중 오류가 발생했습니다.');
+            }
+        });
     </script>
 </body>
 </html>
