--- a/m_html/7_my_info.html
+++ b/m_html/7_my_info.html
@@ -44,15 +44,17 @@
         </div>
     </section>
     <script>
+        
+        const API_BASE_URL = 'http://localhost:5000';
         document.addEventListener("DOMContentLoaded", loadUserInfo);
 
         // 사용자 정보 로드
         async function loadUserInfo() {
             try {
-                const response = await fetch('/api/my_info');
+                const response = await fetch(`${API_BASE_URL}/api/my_info`);
                 if (!response.ok) {
                     alert('로그인이 필요합니다.');
-                    window.location.href = '/login';
+                    window.location.href = '/2_login.html';
                     return;
                 }
 
@@ -63,7 +65,7 @@
 
                 const profilePic = document.getElementById("profile-pic");
                 if (img) {
-                    profilePic.style.backgroundImage = `url(${img})`;
+                    profilePic.style.backgroundImage = `url(${API_BASE_URL}/${img})`;
                 } else {
                     profilePic.style.backgroundImage = 'none'; // 이미지가 없을 때 기본값
                 }
@@ -112,7 +114,7 @@
             }
 
             try {
-                const response = await fetch('/api/my_info', {
+                const response = await fetch(`${API_BASE_URL}/api/my_info`, {
                     method: "PATCH",
                     body: formData,
                 });
@@ -128,7 +130,7 @@
                 }
 
                 const { img } = await response.json(); // 서버에서 반환된 이미지 URL 사용
-                document.getElementById("profile-pic").style.backgroundImage = `url(${img})`;
+                document.getElementById("profile-pic").style.backgroundImage = `url(${API_BASE_URL}/${img})`;
 
                 alert("정보가 성공적으로 수정되었습니다.");
             } catch (err) {
@@ -138,7 +140,7 @@
 
         // 로그아웃
         document.getElementById("log_out_btn").addEventListener("click", () => {
-            window.location.href = "/login";
+            window.location.href = 'http://localhost:3000/2_login.html';
         });
 
         // 회원탈퇴
@@ -146,11 +148,11 @@
             if (!confirm("정말 회원탈퇴를 진행하시겠습니까?")) return;
 
             try {
-                const response = await fetch("/delete_user", { method: "DELETE" });
+                const response = await fetch(`${API_BASE_URL}/delete_user`, { method: "DELETE" });
                 if (!response.ok) throw new Error("회원탈퇴 실패");
 
                 alert("회원탈퇴가 완료되었습니다.");
-                window.location.href = "/login";
+                window.location.href = 'http://localhost:3000/2_login.html';
             } catch (err) {
                 console.error("회원탈퇴 중 오류 발생:", err);
             }
