--- a/m_html/8_mod_pw.html
+++ b/m_html/8_mod_pw.html
@@ -38,10 +38,12 @@
         </form>
     </section>
     <script>
+        
+        const API_BASE_URL = 'http://localhost:5000';
         // 로그아웃 버튼 클릭
         document.getElementById('log_out_btn').addEventListener('click', async () => {
             try {
-                const response = await fetch('/logout', { method: 'POST' });
+                const response = await fetch('${API_BASE_URL}/logout', { method: 'POST' });
                 if (response.ok) {
                     alert('로그아웃되었습니다.');
                     window.location.href = '/login';
@@ -55,7 +57,7 @@
 
         // 내 정보 수정 버튼 클릭
         document.getElementById('mod_my_btn').addEventListener('click', () => {
-            window.location.href = '/my_info';
+            window.location.href = '${API_BASE_URL}/my_info';
         });
 
         // 비밀번호 수정 처리
@@ -78,7 +80,7 @@
             }
 
             try {
-                const response = await fetch('/mod_pw', {
+                const response = await fetch('${API_BASE_URL}/mod_pw', {
                     method: 'PATCH',
                     headers: {
                         'Content-Type': 'application/json',
@@ -88,7 +90,7 @@
 
                 if (response.ok) {
                     alert('비밀번호가 성공적으로 수정되었습니다.');
-                    window.location.href = '/my_info';
+                    window.location.href = '${API_BASE_URL}/my_info';
                 } else {
                     const errorData = await response.json();
                     alert(errorData.error || '비밀번호 수정 실패');
